--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a class="nav-link text-dark" href="resume.html">RESUME</a>
             </li>
         </ul>
-        <footer id="mainFooter" class="text-center p-4 mt-5 pt-5 text-black-50">
+        <footer id="mainFooter" class="text-center p-4 mt-2 pt-5 text-black-50">
           <div class="container">
             <div class="row">
               <div class="col">
@@ -56,21 +56,25 @@
                   <div class="card-text">Follow</div>         
                   <div class="d-flex justify-align-content">
                     <div class="p-4">
-                      <a href="facebook.com">
+                      <a href="facebook.com"  class="anchor">
                         <i class="fab fa-facebook fa-2x"></i>
                       </a>
                     </div>
                     <div class="p-4"> 
-                      <a href="twitter.com">
+                      <a href="twitter.com"  class="anchor">
                       <i class="fab fa-twitter fa-2x"></i>
                     </a>
                   </div>
                     <div class="p-4">
-                      <a href="instagram.com">
+                      <a href="instagram.com"  class="anchor">
                         <i class="fab fa-instagram fa-2x"></i>
                       </a>
                     </div>
                   </div>
+                  <h6 class="h5 mb-4">Check my repository </h6>
+                  <a href="" class="anchor">
+               <i class="fab fa-github fa-2x" aria-hidden="true"></i>
+              </a> 
                 </div>
               </div>
               </div>
@@ -81,18 +85,18 @@
     </div>
       <div class="col-lg-8    sec-overlay d-none d-md-block">
         <div class="container col-10 mx-auto ">
-            <div class="col-6 mx-auto mt-5 mb-2">
-          <img src="images/person1.jpg" alt="" class="img-fluid rounded-circle im">
+            <div class="col-5 mx-auto mt-5 mb-2">
+          <img src="images/high.jpg" alt="" class="img-fluid so rounded-circle ">
           </div>
           <div class="col-lg-5 mx-auto">
-            <p class="text-muted text-black mx-4">Hello im</p>
+            <p class="text-muted text-black mx-auto">Full stack Developer</p>
           </div>
           <div class="col-lg-7 mx-auto">
-            <h4 class="text-dark mx-4">Oladejo Gbolahan</h4>
+            <h4 class="text-dark mx-5">Oladejo Samuel</h4>
           </div>
           <div class="col-lg-12 mx-auto p-3">
             <p class="text-dark p-4 text-justify">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui libero possimus cum. Quas natus repellendus quam ipsum, aperiam, doloribus nesciunt at ipsa tempora neque veniam velit incidunt consequuntur excepturi quia, maxime quos sapiente autem debitis odit dolor similique fugit laboriosam molestias. Accusamus iusto temporibus in magni voluptate illum? Tempore, voluptatibus?
+              Hi, am Oladejo Samuel, a full stack developer. i build responsive web applications, am design wordpress site, am also into cloud base technologies such as docker and kubernetes. i have gained so much experience as a web developer over the past few years. check out my profiles to learn more about me.
             </p>
           </div>
           <br>
@@ -105,14 +109,14 @@
           <img src="images/person1.jpg" alt="" class="img-fluid rounded-circle im">
           </div>
           <div class="col-lg-5 mx-auto">
-            <p class="text-muted text-black text-center mx-4">Hello im</p>
+            <p class="text-muted text-black text-center mx-4">Full stack Developer </p>
           </div>
           <div class="col-sm-12 mx-auto">
-            <h4 class="text-dark mx-2 text-center">Oladejo Gbolahan</h4>
+            <h4 class="text-dark mx-2 text-center">Oladejo Samuel</h4>
           </div>
           <div class="col-sm-12 mx-auto p-2">
             <p class="text-black-100 p-1 text-justify">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui libero possimus cum. Quas natus repellendus quam ipsum, aperiam, doloribus nesciunt at ipsa tempora neque veniam velit incidunt consequuntur excepturi quia, maxime quos sapiente autem debitis odit dolor similique fugit laboriosam molestias. Accusamus iusto temporibus in magni voluptate illum? Tempore, voluptatibus?
+             Hi, am Oladejo Samuel, a full stack developer. i build responsive web applications, am design wordpress site, am also into cloud base technologies such as docker and kubernetes. i have gained so much experience as a web developer over the past few years 
             </p>
           </div>
           <br>
@@ -199,6 +203,14 @@
 }
 body{
   overflow-x: hidden;
+}
+.so{
+  max-height: 200px;
+  max-width: 400px;
+}
+.anchor{
+  text-decoration: none !important;
+  color: inherit;
 }
   </style>
 </body>
