--- a/profile.html
+++ b/profile.html
@@ -40,7 +40,7 @@
                   <a class="nav-link text-dark" href="resume.html">RESUME</a>
               </li>
           </ul>
-          <footer id="mainFooter" class="text-center p-4 mt-5 pt-5 text-black-50">
+          <footer id="mainFooter" class="text-center p-4 mt-2 pt-5 text-black-50">
             <div class="container">
               <div class="row">
                 <div class="col">
@@ -55,21 +55,25 @@
                     <div class="card-text">Follow</div>         
                     <div class="d-flex justify-align-content">
                       <div class="p-4">
-                        <a href="facebook.com">
+                        <a href="facebook.com"  class="anchor">
                           <i class="fab fa-facebook fa-2x"></i>
                         </a>
                       </div>
                       <div class="p-4"> 
-                        <a href="twitter.com">
+                        <a href="twitter.com"  class="anchor">
                         <i class="fab fa-twitter fa-2x"></i>
                       </a>
                     </div>
                       <div class="p-4">
-                        <a href="instagram.com">
+                        <a href="instagram.com"  class="anchor">
                           <i class="fab fa-instagram fa-2x"></i>
                         </a>
                       </div>
                     </div>
+                    <h6 class="h5 mb-4">Check my repository </h6>
+                    <a href="" class="anchor">
+                 <i class="fab fa-github fa-2x" aria-hidden="true"></i>
+                </a> 
                   </div>
                 </div>
                 </div>
@@ -82,9 +86,9 @@
           <div class="row">
         <div  class="col-md-6 mt-5">
         <div class="car p-2 m-2">
-            <img class="card-img-top  help w-100" src="images/person4.jpg" alt="">
+            <img class="card-img-top h-25  help w-100" src="images/amhope.jpg" alt="">
             <div class="card-body col-md-9 mx-auto">
-                <h4 class="card-title mx-auto">Oladejo Gbolahan</h4>
+                <h4 class="card-title mx-auto">Oladejo Samuel</h4>
                 <i class="card-text mx-4">Software Engineer</i>
             </div>
         </div>
@@ -92,25 +96,29 @@
       <div class="col-md-6">
         <div class="car card-body py-5">
             <h3>My Skills</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus ea excepturi officia quisquam atque eos.</p>
+            <p>Below are some the technologies i currently use.</p>
             <hr>
-            <h4>HTML 5</h4>
-            <div class="progress mb-3">
-              <div class="progress-bar bg-success" style="width:100%"></div>
-            </div>
-            <h4>CSS 3</h4>
-            <div class="progress mb-3">
-              <div class="progress-bar bg-danger" style="width:100%"></div>
-            </div>
-            <h4>JavaScript</h4>
+                      <h4>JavaScript</h4>
             <div class="progress mb-3">
               <div class="progress-bar bg-warning" style="width:90%"></div>
             </div>
+            <h4>Bootstrap</h4>
+            <div class="progress mb-3">
+              <div class="progress-bar bg-default" style="width: 99%"></div>
+            </div>
+            <h4>Docker</h4>
+            <div class="progress mb-3">
+              <div class="progress-bar bg-dark" style="width:85%"></div>
+            </div>
+            <h4>Jquery</h4>
+            <div class="progress mb-3">
+              <div class="progress-bar bg-danger" style="width:85%"></div>
+            </div>
             <h4>PHP</h4>
             <div class="progress mb-3">
-              <div class="progress-bar bg-info" style="width:80%"></div>
+              <div class="progress-bar bg-info" style="width:90%"></div>
             </div>
-            <h4>Python</h4>
+            <h4>Vue</h4>
             <div class="progress mb-3">
               <div class="progress-bar bg-primary" style="width:70%"></div>
             </div>
@@ -182,6 +190,7 @@
      }
      .help{
        border-radius: 2%;
+       max-height: 470px;
      }
      .opac a:hover{
     transition: opacity linear 100ms;
@@ -190,6 +199,10 @@
 }
 body{
   overflow-x: hidden;
+}
+.anchor{
+  text-decoration: none !important;
+  color: inherit;
 }
   </style>
 </body>
