--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@
                     </a>
               </li>
           </ul>
-          <footer id="mainFooter" class="text-center p-4 mt-5 pt-5 text-black-50">
+          <footer id="mainFooter" class="text-center p-4 mt-2 pt-5 text-black-50">
             <div class="container">
               <div class="row">
                 <div class="col">
@@ -55,21 +55,25 @@
                     <div class="card-text">Follow</div>         
                     <div class="d-flex justify-align-content">
                       <div class="p-4">
-                        <a href="facebook.com">
+                        <a href="facebook.com"  class="anchor">
                           <i class="fab fa-facebook fa-2x"></i>
                         </a>
                       </div>
                       <div class="p-4"> 
-                        <a href="twitter.com">
+                        <a href="twitter.com"  class="anchor">
                         <i class="fab fa-twitter fa-2x"></i>
                       </a>
                     </div>
                       <div class="p-4">
-                        <a href="instagram.com">
+                        <a href="instagram.com"  class="anchor">
                           <i class="fab fa-instagram fa-2x"></i>
                         </a>
                       </div>
                     </div>
+                    <h6 class="h5 mb-4">Check my repository </h6>
+                    <a href="" class="anchor">
+                 <i class="fab fa-github fa-2x" aria-hidden="true"></i>
+                </a> 
                   </div>
                 </div>
                 </div>
@@ -82,7 +86,7 @@
         <div id="resume" class="mt-4" >        
             <div class="car card-body py-5">
               <h3>Where Have I Worked?</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque similique saepe inventore rem vitae esse.</p>
+              <p>Below are some of the places i gained experience .</p>
               <div class="card-deck">
                 <div class="card">
                   <div class="card-body">
@@ -203,6 +207,10 @@
 }
 body{
   overflow-x: hidden;
+}
+.anchor{
+  text-decoration: none !important;
+  color: inherit;
 }
   </style>
 </body>
